--- a/Task-1/index.html
+++ b/Task-1/index.html
@@ -8,23 +8,45 @@
 <body>
       <!-- Task-1 -->
 
-    <section id="profile">
+    <!-- <section id="profile">
         <h2>User profile</h2>
         <p>Name : Mohit</p>
         <p>Role : Developer</p>
-    </section>
+    </section> -->
 
 
 
       <!-- Task-2 -->
 
-    <p class="important">HTML</p>
+    <!-- <p class="important">HTML</p>
     <p class="important">CSS</p>
-    <p class="important">JavaScript</p>
+    <p class="important">JavaScript</p> -->
 
 
+      <!-- Task-3 -->
+
+    <!-- <p>Paragraph one</p>
+    <p>Paragraph two</p>
+    <p>Paragraph three</p>
+    <p>Paragraph four</p>
+    <p>Paragraph five</p> -->
 
 
+      <!-- Task-4 -->
+
+    <!-- <div class="box">Box1</div>
+    <div class="box">Box2</div>
+    <div class="box">Box3</div> -->
+
+
+      <!-- Task-5 -->
+
+    <section id="content">
+      <h2>Article</h2>
+      <p>Paragraph 1</p>
+      <p>Paragraph 2</p>
+      <p>Paragraph 3</p>
+    </section>
 
     <script src="script.js"></script>
 </body>
